--- a/CódigoFuente/BitacorasProduccion/Views/Information/Vacaciones.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Information/Vacaciones.cshtml
@@ -25,6 +25,6 @@
 </head>
 
 <body>
-    <img src="~/Content/images/BonoPTU.JPG"  />
+    <img src="~/Content/images/vacaciones-simula.jpg" /> 
 </body>
 </html>
