--- a/CódigoFuente/BitacorasProduccion/Views/Information/EnvioEmail.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Information/EnvioEmail.cshtml
@@ -87,7 +87,7 @@
                             </div>
                             <div class="ln_solid"></div>
                             <div class="form-group row">
-                                <span><b>Correos CC</b></span>
+                                <span><b>Correos CCO</b></span>
                             </div>
                             int i = 0;
                             foreach (var correo in Model.ccList)
