--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoSolicitudes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoSolicitudes.cshtml
@@ -101,6 +101,35 @@
 
                                         </div>
                                     }
+                                    @if (ViewBag.RH != null)
+                                    {
+                                        <div class="form-group">
+                                            @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
+                                            {
+                                                <div class="form-group row ">
+                                                    <label class="control-label col-md-1 col-sm-1" for="planta" style="text-align:right">Planta:</label>
+                                                    <div class="col-md-2 col-sm-2">
+                                                        @Html.DropDownList("planta", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                    </div>
+                                                    <label class="control-label col-md-1 col-sm-1" for="solicitante" style="text-align:right">Solicitante:</label>
+                                                    <div class="col-md-2 col-sm-2">
+                                                        @Html.DropDownList("solicitante", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                    </div>
+                                                    <div class="col-md-1 col-sm-1">
+                                                        <a href="@Url.Action(@HttpContext.Current.Request.RequestContext.RouteData.Values["action"].ToString(), ViewBag.ControllerName)" class="btn btn-warning" title="Restablecer">
+                                                            <i class="fa fa-refresh"></i>
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-md-1 col-sm-1">
+                                                        <input type="submit" value="Filtrar" class="btn btn-info float-right" />
+                                                    </div>
+                                                </div>
+
+                                            }
+                                            <hr />
+
+                                        </div>
+                                    }
 
                                     <div class="form-group">
                                         @if (ViewBag.Create != null && ViewBag.Create)
@@ -173,8 +202,13 @@
                                                             <a href="@Url.Action("GenerarPDF", ViewBag.ControllerName, new { id = item.id })" target="_blank" class="btn btn-danger" rel="tooltip" data-title="Generar PDF" data-placement="right">
                                                                 <i class="fa-solid fa-file-pdf"></i>
                                                             </a>
+                                                            if (User.IsInRole(Clases.Util.TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CERRAR))
+                                                            {
+                                                                <a href="@Url.Action("Cerrar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" rel="tooltip" data-title="Editar Solicitud" data-placement="right">
+                                                                    <i class="fa-regular fa-pen-to-square"></i>
+                                                                </a>
+                                                            }
                                                         }
-
                                                     </td>
                                                     <td style="text-align:center">
                                                         @Html.DisplayFor(modelItem => item.id)
