--- a/CódigoFuente/BitacorasProduccion/Views/Information/Vacaciones.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Information/Vacaciones.cshtml
@@ -8,7 +8,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Bono de TPU</title>
+    <title>Vacaciones</title>
     <style type="text/css">
         body {
             background-color: #000310
