2023-04-05 Se agrega nombre del responsable del equipo a log.

--- a/CódigoFuente/BitacorasProduccion/Views/Information/Log.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Information/Log.cshtml
@@ -68,6 +68,7 @@
                                                 <th width="50%">
                                                     Equipo
                                                 </th>
+                                                <th>Responsable de Equipo</th>
                                                 <th>
                                                     Fecha
                                                 </th>
@@ -81,10 +82,12 @@
 
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.id)
-                                                    </td>
-
+                                                    </td>                                                   
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.nombre_equipo)
+                                                    </td>
+                                                    <td>
+                                                        @item.GetResponsable()
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.fecha)
