2023-04-06 Se elimina enter de envío de formulario de Budget.

--- a/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/Edit.cshtml
@@ -1301,7 +1301,16 @@
                 });
             });
 
+            //evita el enter en el formulario
+            $("form").keypress(function (e) {
+                if (e.which == 13) {
+                    return false;
+                }
+            });
+
             $.unblockUI();
+
+
 
         });
 
